Rework preprocessors to use the new API
Signed-off-by: TheSilkMiner <thesilkminer@outlook.com>